opam-version: "2.0"

description: "OCaml interface to GTK+"
synopsis: "OCaml interface to GTK+"

maintainer: "garrigue@math.nagoya-u.ac.jp"
authors: ["Jacques Garrigue et al., Nagoya University"]
homepage: "http://lablgtk.forge.ocamlcore.org/"
bug-reports: "https://github.com/garrigue/lablgtk/issues"
dev-repo: "git+https://github.com/garrigue/lablgtk.git"
license: "LGPL with linking exception"
doc: "https://garrige.github.io/lablgtk/lablgtk"

depends: [
  "ocaml"     {         >= "4.05.0" }
  "dune"      { build & >= "1.4.0"  }
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depexts: [
  ["libgtk2.0-dev" "libexpat1-dev"] {os-distribution = "debian"                  }
  ["libgtk2.0-dev" "libexpat1-dev"] {os-distribution = "ubuntu"                  }
  ["gtk" "expat"]                   {os-distribution = "homebrew" & os = "macos" }
  ["gtk2-devel"]                    {os-distribution = "centos"                  }
  ["gtk2-devel"]                    {os-distribution = "fedora"                  }
  ["gtk2-devel"]                    {os-distribution = "oraclelinux"             }
  ["gtk+2.0-dev"]                   {os-distribution = "alpine"                  }
  ["gtk2-devel"]                    {os-family       = "suse"                    }
]

post-messages: [
  "This package requires gtk+ 2.0 development packages installed on your system"
    {failure}
  """
To solve pkg-config issues, you may need to do
'export PKG_CONFIG_PATH=/opt/X11/lib/pkgconfig' and retry"""
    {failure & os = "macos"}
]

