opam-version: "2.0"

synopsis: "OCaml interface to GTK+ GooCanvas library"
description: """
OCaml interface to GTK+3, goocanvas library.

See https://garrigue.github.io/lablgtk/ for more information.
"""

maintainer: "garrigue@math.nagoya-u.ac.jp"
authors: ["Jacques Garrigue et al., Nagoya University"]
homepage: "https://github.com/garrigue/lablgtk"
bug-reports: "https://github.com/garrigue/lablgtk/issues"
dev-repo: "git+https://github.com/garrigue/lablgtk.git"
doc: "https://garrigue.github.io/lablgtk/lablgtk3/lablgtk3-goocanvas2"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"

depends: [
  "ocaml"                {         >= "4.09.0" }
  "dune"                 {         >= "1.8.0"  }
  "lablgtk3"             {          = version  }
  "conf-goocanvas2"      { build & >= "0"      }
  "camlp-streams"        { build               }
]

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
