opam-version: "2.0"

synopsis: "OCaml interface to GTK+3"
description: """
OCaml interface to GTK+3, gtkspell library

See http://lablgtk.forge.ocamlcore.org/ for more information.

"""

maintainer: "garrigue@math.nagoya-u.ac.jp"
authors: ["Jacques Garrigue et al., Nagoya University"]
homepage: "https://github.com/garrigue/lablgtk"
bug-reports: "https://github.com/garrigue/lablgtk/issues"
dev-repo: "git+https://github.com/garrigue/lablgtk.git"
doc: "https://garrigue.github.io/lablgtk/lablgtk-sourceview"
license: "LGPL with linking exception"

depends: [
  "ocaml"                {         >= "4.05.0"    }
  "dune"                 { build & >= "1.4.0"     }
  "lablgtk3"             {         >= "3.0.beta4" }
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
