opam-version: "2.0"

synopsis: "OCaml interface to GTK+ gtksourceview library"
description: """
OCaml interface to GTK+3, gtksourceview3 library.

See http://lablgtk.forge.ocamlcore.org/ for more information.
"""

maintainer: "garrigue@math.nagoya-u.ac.jp"
authors: ["Jacques Garrigue et al., Nagoya University"]
homepage: "https://github.com/garrigue/lablgtk"
bug-reports: "https://github.com/garrigue/lablgtk/issues"
dev-repo: "git+https://github.com/garrigue/lablgtk.git"
doc: "https://garrigue.github.io/lablgtk/lablgtk-sourceview"
license: "LGPL with linking exception"

depends: [
  "ocaml"                {         >= "4.05.0"    }
  "dune"                 { build & >= "1.4.0"
                                 & != "1.7.0"
                                 & != "1.7.1"     } # Due to dune/dune#1833
  "lablgtk3"             {         >= "3.0.beta4" }
  "conf-gtksourceview3"  { build & >= "0"         }
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
