opam-version: "2.0"

synopsis: "OCaml interface to GTK+3"
description: """
OCaml interface to GTK+3

See https://garrigue.github.io/lablgtk/ for more information.
"""

maintainer: "garrigue@math.nagoya-u.ac.jp"
authors: ["Jacques Garrigue et al., Nagoya University"]
homepage: "https://github.com/garrigue/lablgtk"
bug-reports: "https://github.com/garrigue/lablgtk/issues"
dev-repo: "git+https://github.com/garrigue/lablgtk.git"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
doc: "https://garrigue.github.io/lablgtk/lablgtk3/lablgtk3"

depends: [
  "ocaml"     {         >= "4.09.0" }
  "camlp-streams" {     >= "5.0" & build }
  "dune"      {         >= "1.8.0"  }
  "cairo2"    {         >= "0.6"    }
  "conf-gtk3" {         >= "18"     }
  "ocamlfind" { dev                 }
  "camlp5"    { dev                 }
]

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "build" "-p" name "-j" jobs "examples/buttons.exe" ]
]
