; Dune build file for lablgtk3
; Written by EJGA, (c) 2018-2019 MINES ParisTech
; This file is in the public domain

(rule
 (targets sourceView3_tags.h sourceView3_tags.c sourceView3Enums.ml)
 (action (run varcc %{dep:sourceView3_tags.var})))

(rule
 (targets gtkSourceView3Props.ml ogtkSourceView3Props.ml)
 (action (run propcc %{dep:gtkSourceView3.props})))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; lablgtk3-sourceview3                                                 ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (targets
   cflag-gtksourceview-3.0.sexp
   clink-gtksourceview-3.0.sexp)
 (action (run dune_config -pkg gtksourceview-3.0 -version 3.18)))

(rule
 (targets cflag-extraflags.sexp)
 (action (with-outputs-to cflag-extraflags.sexp (echo "(%{env:LABLGTK_EXTRA_FLAGS=})"))))

(library
 (name lablgtk3_sourceview3)
 (public_name lablgtk3-sourceview3)
 (wrapped false)
 (flags :standard -w -6-7-33)
 (modules_without_implementation gtkSourceView3_types)
 (c_names ml_gtksourceview3)
 (c_flags         (:include cflag-gtksourceview-3.0.sexp) (:include cflag-extraflags.sexp) -Wno-deprecated-declarations)
 (c_library_flags (:include clink-gtksourceview-3.0.sexp))
 (libraries lablgtk3))
