; Dune build file for lablgtk3
; Written by EJGA, (c) 2018-2019 MINES ParisTech
; This file is in the public domain

; Maybe auto-generate?
(include dune-enum.sexp)
(include dune-prop.sexp)

(rule
 (targets
   cflag-gtk+-3.0.sexp
   clink-gtk+-3.0.sexp)
 (action (run dune_config -pkg gtk+-3.0 -version 3.18)))

(rule
 (targets cflag-extraflags.sexp)
 (action (with-outputs-to cflag-extraflags.sexp (echo "(%{env:LABLGTK_EXTRA_FLAGS=})"))))

(library
 (name lablgtk3)
 (public_name lablgtk3)
 (wrapped false)
 (flags :standard -w -6-7-9-10-27-32-33-34-35-36-50-52 -no-strict-sequence)
 (install_c_headers
   wrappers ml_glib ml_gdk ml_gtk ml_gobject ml_gdkpixbuf pango_tags ml_pango ml_gtktext gtk_tags gdk_tags)
 (c_names
   wrappers
   ml_glib ml_gvaluecaml ml_gpointer ml_gobject
   ml_pango cairo_pango_stubs
   ml_gdk ml_gdkpixbuf
   ml_gtk ml_gtkmisc
   ml_gtkbuilder
   ml_gtkaction ml_gtkbin ml_gtkbutton ml_gtktext ml_gtkedit
   ml_gtkmenu ml_gtkfile ml_gtktree ml_gtkpack
   ml_gtkstock ml_gtkrange ml_gtkassistant
   ml_gtkgl
 )
 (c_flags         (:include cflag-gtk+-3.0.sexp) (:include cflag-extraflags.sexp) -Wno-deprecated-declarations)
 (c_library_flags (:include clink-gtk+-3.0.sexp))
 (libraries threads cairo2))
