;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Common setup and tools                                               ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(ocamllex
 varcc_lexer
 propcc_lexer)

(executable
 (name varcc)
 (modules varcc varcc_lexer)) 

(executable
 (name propcc)
 (modules propcc propcc_lexer))
 

(executable
 (name dune_config)
 (modules dune_config)
 (libraries dune.configurator))

(library
 (name gtkdoc)
 (modules gtkdoc)
 (libraries str ocamldoc))
