; Dune build file for lablgtk3
; Written by EJGA, (c) 2018-2019 MINES ParisTech
; This file is in the public domain

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; LABLGTK3 tools                                                       ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
(executable
 (name gdk_pixbuf_mlsource)
 (public_name gdk_pixbuf_mlsource3)
 (package lablgtk3)
 (modules gdk_pixbuf_mlsource)
 (libraries lablgtk3))

(executable
 (name lablgladecc)
 (public_name lablgladecc3)
 (package lablgtk3)
 (modules xml_lexer lablgladecc)
 (flags :standard -w -3-6-27)
 (libraries lablgtk3))

(ocamllex xml_lexer)
